@@ -56,7 +56,8 @@
 void VG_NOTIFY_ON_LOAD(freeres)( void );
 void VG_NOTIFY_ON_LOAD(freeres)( void )
 {
-#  if !defined(__UCLIBC__) && !defined(VGPV_arm_linux_android)
+#  if !defined(__UCLIBC__) \
+   && !defined(VGPV_arm_linux_android) && !defined(VGPV_x86_linux_android)
    extern void __libc_freeres(void);
    __libc_freeres();
 #  endif
@@ -88,27 +89,6 @@ void * VG_NOTIFY_ON_LOAD(ifunc_wrapper) (void)
                                     fn.nraddr, result, 0, 0, 0);
     return (void*)result;
 }
-
-#if defined(ANDROID_HARDWARE_emulator)
-/* When running on android emulator, we get the following error when doing
-     ./valgrind date
-
-   link_image[1921]:   494 could not load needed library
-   '/data/local/Inst/lib/valgrind/vgpreload_core-arm-linux.so' for 'date'
-   (reloc_library[1285]:   494 cannot locate '__cxa_finalize'...
-   )CANNOT LINK EXECUTABLE
-
-   This problem is bypassed by adding the below function.
-   Do not ask me to explain neither the problem nor the solution.
-*/
-extern void __cxa_finalize(void);
-void __cxa_finalize(void)
-{
-   // ??? what should we do here ? Silently do nothing looks not sane.
-   // So, try to crash:
-   *(volatile int *)0 = 'x';
-}
-#endif
 
 #elif defined(VGO_darwin)
 
